objects/Collateral_History2__c.object
<CustomObject>
    <fields>
        <fullName>Appraisal_Date__c</fullName>
        <label>Appraisal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Method__c</fullName>
        <formula>TEXT( Collateral__r.LLC_BI__Assessment_Method__c)</formula>
        <label>Assessment Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block__c</fullName>
        <formula>Collateral__r.LLC_BI__Block__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Block</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Collateral__r.LLC_BI__City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Value__c</fullName>
        <label>Collateral Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collateral__c</fullName>
        <label>Collateral</label>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipName>Collateral_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <formula>Collateral__r.LLC_BI__County__c</formula>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <description>Created for the ABN Amro use case and used for Real Estate 
If a record is created via the Collateral Valuation object, this field auto-populates via the Workflow Expiry Date on the Collateral Mgmt. DMR - 000321.</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Requirement__c</fullName>
        <formula>Collateral_Value__c  -  Land_Value_If_Real_Estate__c</formula>
        <inlineHelpText>For Real Estate; based on Collateral Value - Land Value</inlineHelpText>
        <label>Insurance Requirement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Land_Value_If_Real_Estate__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>If this is real estate, what is the value of the land? This is used for insurance requirement calculations.</inlineHelpText>
        <label>Adjustment to Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Listed_for_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Listed for Sale?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Units__c</fullName>
        <formula>TEXT(Collateral__r.LLC_BI__Number_of_Units__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Units</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parcel_Number__c</fullName>
        <formula>Collateral__r.LLC_BI__Parcel_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parcel Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pending Sale?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Tax_ID__c</fullName>
        <formula>Collateral__r.LLC_BI__Property_Tax_Id__c</formula>
        <label>Property Tax ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <formula>TEXT( Collateral__r.LLC_BI__Property_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT(Collateral__r.LLC_BI__State__c)</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>As Is</fullName>
                </value>
                <value>
                    <fullName>As Complete</fullName>
                </value>
                <value>
                    <fullName>As Stabalized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <formula>Collateral__r.LLC_BI__Street_Address__c</formula>
        <label>Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Collateral_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <formula>Collateral__r.LLC_BI__Year_Built__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Built</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>Collateral__r.LLC_BI__Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <label>Collateral Valuation</label>
    <nameField>
        <displayFormat>CH-{00000000}</displayFormat>
        <label>Collateral History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collateral Valuations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>